-----------------------------------------------------
QUESO: Quantification of Uncertainty for Estimation,
Simulation, and Optimization.
-----------------------------------------------------

Version 0.45.1 (In Progress)
  * bug fixes with multi-level restart capability

Version 0.45.0 (10 April 2011)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.45.0

  * standalone version binary renamed to queso_version
  * removed several redundant files from tarball distribution
  * include install of queso.h versioning header
  * added unifiedReadContents() routine to uqScalarSequenceClass
  * added HDF5 capability to unifiedWriteContents() routine of uqScalarSequenceClass
  * added restart capability to ML algorithm
  * added expected information gain calculations to ML algorithm

Version 0.44.0 (22 February 2011)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.44.0

  * added uqMpiCommClass
  * added uqMapClass
  * added uqDistArrayClass
  * configure options modified to allow for optional use of Trilinos, HDF5 and GLPK; 
    with the change, the minimum dependencies for QUESO are Boost, GSL, and GRVY
  * improved uqScalarSequenceClass and uqSequenceOfVectorsClass

Version 0.43.0 (24 January 2011)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.43.0

  * release for Sandia/CSRI

Version 0.42.1 (02 February 2011)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.42.1

  * bux fixed for extra MPI_Barrier() calls in uqEnvironmentClass
  * added uqPiecewiseLinear1D1DFunctionClass

Version 0.42.0 (07 December 2010)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.42

  * fixed output runtime failure when running multiple chains in parallel
  * fixed race condition in output directory creation
  * inclusion of automatic licensing header support
  * added minimum version requirement for autoconf 
  * added configuration support for the GNU Linear Programming Toolkit (GLPK)
  * added interface to HDF5 for some I/O