@@ -5,6 +5,7 @@ Simulation, and Optimization.
 
 Version 0.45.1 (In Progress)
   * bug fixes with multi-level restart capability
+  * bug fixes with uqDistArrayClass copy constructor
 
 Version 0.45.0 (10 April 2011)
 https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.45.0
